# machine-learning-zoomcamp

./: .gitignore  README.md
capstone-project/: .coveragerc  README.md  capstone.ipynb  docker-compose.yaml  mlflow.db  pyproject.toml  sonar-project.properties  todo.md
capstone-project/infrastructures/: .terraform.tfstate.lock.info  main.tf  output.tf  variables.tf
capstone-project/kubernetes/eks/mlflow/: service.yaml
capstone-project/kubernetes/eks/server/: hpa.yaml  service.yaml
capstone-project/kubernetes/eks/train-pipeline/: deployment.yaml
capstone-project/kubernetes/kind/: kind-config.yaml
capstone-project/kubernetes/local/kind/: kind-config.yaml
capstone-project/kubernetes/local/mlflow/: deployment.yaml  service.yaml
capstone-project/kubernetes/local/prefect/: service.yaml
capstone-project/kubernetes/local/server/: deployment.yaml  service.yaml
capstone-project/kubernetes/mlflow/: deployment.yaml
capstone-project/kubernetes/prefect/: deployment.yaml  service.yaml
capstone-project/kubernetes/server/: deployment.yaml
capstone-project/kubernetes/train-pipeline/: deployment.yaml  hpa.yaml
capstone-project/server/: Dockerfile  client.py  docker-compose-main.yaml  docker-compose.yaml  predict.py  requirements.txt  server.py  test_server.py
capstone-project/server/scripts/: smoke-test.sh
capstone-project/tests/: test_server.py
capstone-project/train_pipeline/: Dockerfile  capstone.py  docker-compose.yaml  pipeline.py
certificate/: download.py
midterm-project/: Dockerfile  README.md  mid-term.ipynb  (+5 more)
week1/: pyproject.toml  week1.ipynb
(+28 files in other folders)
